Feat: Add version to HTML page
feat: added html version placeholder
-We will be adding our version to the bottom right of the page. Here I am hard coding the version in, this will dynamically be represented eventually. We are surrounding this in a span, and currently inside an h2 tag

style: adding position to version
we are going to position the version in the bottom right of our page. I implemented it on the span for right now, I also added some padding on the right so it did not touch the corner of the browser too heavy

refactor: swap span / h2 position

style: target .app-version to position version markup

refactor: span encapsulation fixed

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,5 +10,6 @@
 <body>
   <h1 class="header">Tic Tac Toe</h1>
   <h2 class="subheader">No winner yet!</h2>
+  <h2 class="app-version">Version <span class="app-version_version">0.0.1</span></h2>
 </body>
 </html>
