Feat: Add Tic-Tac-Toe grid
Added a parent div with a class of "game-grid" to contain 9 child container divs
with classes of "grid-cell" and filled each grid cell with either an X or an O.
Styled the game-grid class to use CSS grid and created a three column, centered layout.

FSA2021-62

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,17 @@
 <body>
   <h1 class="header">Tic Tac Toe</h1>
   <h2 class="subheader">No winner yet!</h2>
+  <div class="game-grid">
+    <div class="grid-cell util-no-top-border util-no-left-border">X</div>
+    <div class="grid-cell util-no-top-border">O</div>
+    <div class="grid-cell util-no-top-border util-no-right-border">X</div>
+    <div class="grid-cell util-no-left-border">O</div>
+    <div class="grid-cell">X</div>
+    <div class="grid-cell util-no-right-border">X</div>
+    <div class="grid-cell util-no-bottom-border util-no-left-border">O</div>
+    <div class="grid-cell util-no-bottom-border">X</div>
+    <div class="grid-cell util-no-bottom-border util-no-right-border">O</div>
+  </div>
   <h2 class="app-version">Version <span class="app-version_version">0.0.1</span></h2>
 </body>
 </html>
