--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css" type='text/css' media='screen'>
+  <script type="module" src="index.js"></script>
   <title>Tic-Tac-Toe</title>
 </head>
 <body>
