feat: add logic to change subheader text to say whose turn
- Uses a document.querySelector to get the .subheader so that it can be
changed
- Add subheading to handleClickCell so that it can be manipulated within
the function
- Adds the core logic related to the Jira Card
- Removes the starting HTML subheader text ("No winner yet")
- Adds text to subheader declaring who has the first turn based on state
- Also includes updating tests:
  - The mocked DOM now more accurately reflects the behavior of the
  current DOM in the UI.
  - Incorporating other previous changes into the tests.
  - Previous version called handleClickCell directly, this version adds
  the event handler and calls handleClickCell by simulating a click

FSA2021-71

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1 class="header">Tic Tac Toe</h1>
-  <h2 class="subheader">No winner yet!</h2>
+  <h2 class="subheader"></h2>
   <div class="game-grid">
     <div class="grid-cell util-no-top-border util-no-left-border"></div>
     <div class="grid-cell util-no-top-border"></div>
