Test: Reduce test complexity
Several changes were made to tests to prevent tests from failing due to problems within the
tests themselves.

I removed the utility classes from our grid CSS and replaced them with pseudo-classes that identified
different grid cells using basic math. These extra classes could then be removed from the HTML and,
likewise, from the tests.
I also removed a loop from the toggling test block and replaced it with three it statements to show
the game toggling between Xs and Os.
Tests using .click() events in the handle click cell function were also removed and replaced with tests
that directly called the handle click cell function instead. This allowed us to remove the
addHandleClickListener() function as well.

I also made several style changes within the tests to make them appear more uniform and make it clearer
how tests should be updated or added.

FSA2021-74

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,15 +12,15 @@
   <h1 class="header">Tic Tac Toe</h1>
   <h2 class="subheader"></h2>
   <div class="game-grid">
-    <div class="grid-cell util-no-top-border util-no-left-border"></div>
-    <div class="grid-cell util-no-top-border"></div>
-    <div class="grid-cell util-no-top-border util-no-right-border"></div>
-    <div class="grid-cell util-no-left-border"></div>
     <div class="grid-cell"></div>
-    <div class="grid-cell util-no-right-border"></div>
-    <div class="grid-cell util-no-bottom-border util-no-left-border"></div>
-    <div class="grid-cell util-no-bottom-border"></div>
-    <div class="grid-cell util-no-bottom-border util-no-right-border"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
+    <div class="grid-cell"></div>
   </div>
   <h2 class="app-version">Version <span class="app-version_version">0.0.1</span></h2>
 </body>
